--- a/src/main/webapp/WEB-INF/template/private/sys/userInfo.html
+++ b/src/main/webapp/WEB-INF/template/private/sys/userInfo.html
@@ -1,4 +1,5 @@
 <input name="userid" value="$!obj.userid" type="hidden">
+<input name="unitid" value="$!obj.unitid" type="hidden">
 <div class="tabbable" id="user-profile-3">
     <ul class="nav nav-tabs padding-16">
         <li class="active">
@@ -17,7 +18,7 @@
 
     <div class="tab-content profile-edit-tab-content">
         <div id="edit-basic" class="tab-pane in active">
-            <h4 class="header blue bolder smaller">General</h4>
+            <h4 class="header blue bolder smaller">基本信息</h4>
             <div class="row">
                 <div class="col-xs-12 col-sm-4">
                     <span class="profile-picture">
@@ -31,7 +32,7 @@
 
                 <div class="col-xs-12 col-sm-8">
                     <div class="form-group">
-                        <label class="col-sm-4 control-label no-padding-right"
+                        <label class="col-sm-3 control-label no-padding-right"
                                for="form-field-username">用户名</label>
 
                         <div class="col-sm-8">
@@ -43,64 +44,27 @@
                     <div class="space-4"></div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label no-padding-right" for="form-field-first">姓名</label>
+                        <label class="col-sm-3 control-label no-padding-right" for="form-field-realname">姓名</label>
 
                         <div class="col-sm-8">
-                            <input class="col-xs-12 col-sm-10" type="text" id="form-field-first" placeholder="Name"
+                            <input class="col-xs-12 col-sm-10" type="text" id="form-field-realname" placeholder="Name"
                                    value="$!obj.realname"/>
                         </div>
                     </div>
-                </div>
-            </div>
+                    <div class="space-4"></div>
 
-            <hr/>
-            <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-date">Birth Date</label>
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label no-padding-right" for="form-field-comment">用户描述</label>
 
-                <div class="col-sm-9">
-                    <div class="input-medium">
-                        <div class="input-group">
-                            <input class="input-medium date-picker" id="form-field-date" type="text"
-                                   data-date-format="dd-mm-yyyy" placeholder="dd-mm-yyyy"/>
-																			<span class="input-group-addon">
-																				<i class="icon-calendar"></i>
-																			</span>
+                        <div class="col-sm-8">
+                            <textarea id="form-field-comment">$!obj.descript</textarea>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="space-4"></div>
-
-            <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right">Gender</label>
-
-                <div class="col-sm-9">
-                    <label class="inline">
-                        <input name="form-field-radio" type="radio" class="ace"/>
-                        <span class="lbl"> Male</span>
-                    </label>
-
-                    &nbsp; &nbsp; &nbsp;
-                    <label class="inline">
-                        <input name="form-field-radio" type="radio" class="ace"/>
-                        <span class="lbl"> Female</span>
-                    </label>
-                </div>
-            </div>
-
-            <div class="space-4"></div>
-
-            <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-comment">Comment</label>
-
-                <div class="col-sm-9">
-                    <textarea id="form-field-comment"></textarea>
                 </div>
             </div>
 
             <div class="space"></div>
-            <h4 class="header blue bolder smaller">Contact</h4>
+            <h4 class="header blue bolder smaller">联系方式</h4>
 
             <div class="form-group">
                 <label class="col-sm-3 control-label no-padding-right" for="form-field-email">Email</label>
@@ -108,7 +72,7 @@
                 <div class="col-sm-9">
 																	<span class="input-icon input-icon-right">
 																		<input type="email" id="form-field-email"
-                                                                               value="alexdoe@gmail.com"/>
+                                                                               value="$!obj.email"/>
 																		<i class="icon-envelope"></i>
 																	</span>
                 </div>
@@ -117,73 +81,19 @@
             <div class="space-4"></div>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-website">Website</label>
-
-                <div class="col-sm-9">
-																	<span class="input-icon input-icon-right">
-																		<input type="url" id="form-field-website"
-                                                                               value="http://www.alexdoe.com/"/>
-																		<i class="icon-globe"></i>
-																	</span>
-                </div>
-            </div>
-
-            <div class="space-4"></div>
-
-            <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-phone">Phone</label>
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-phone">手机号</label>
 
                 <div class="col-sm-9">
 																	<span class="input-icon input-icon-right">
 																		<input class="input-medium input-mask-phone"
-                                                                               type="text" id="form-field-phone"/>
+                                                                               type="text" id="form-field-phone" value="$!obj.mobile"/>
 																		<i class="icon-phone icon-flip-horizontal"></i>
 																	</span>
                 </div>
             </div>
 
             <div class="space"></div>
-            <h4 class="header blue bolder smaller">Social</h4>
 
-            <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-facebook">Facebook</label>
-
-                <div class="col-sm-9">
-																	<span class="input-icon">
-																		<input type="text" value="facebook_alexdoe"
-                                                                               id="form-field-facebook"/>
-																		<i class="icon-facebook blue"></i>
-																	</span>
-                </div>
-            </div>
-
-            <div class="space-4"></div>
-
-            <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-twitter">Twitter</label>
-
-                <div class="col-sm-9">
-																	<span class="input-icon">
-																		<input type="text" value="twitter_alexdoe"
-                                                                               id="form-field-twitter"/>
-																		<i class="icon-twitter light-blue"></i>
-																	</span>
-                </div>
-            </div>
-
-            <div class="space-4"></div>
-
-            <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-gplus">Google+</label>
-
-                <div class="col-sm-9">
-																	<span class="input-icon">
-																		<input type="text" value="google_alexdoe"
-                                                                               id="form-field-gplus"/>
-																		<i class="icon-google-plus red"></i>
-																	</span>
-                </div>
-            </div>
         </div>
 
 
@@ -192,7 +102,7 @@
 
 
             <div class="form-group">
-                <label class="col-sm-5 control-label no-padding-right" for="form-field-pass3">原密码</label>
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-pass3">原密码</label>
 
                 <div class="col-sm-9">
                     <input type="password" id="form-field-pass3" name="oldpassword"/>
@@ -201,7 +111,7 @@
             <div class="space-4"></div>
 
             <div class="form-group">
-                <label class="col-sm-5 control-label no-padding-right" for="form-field-pass1">新密码</label>
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-pass1">新密码</label>
 
                 <div class="col-sm-9">
                     <input type="password" name="password" id="form-field-pass1"/>
@@ -211,7 +121,7 @@
             <div class="space-4"></div>
 
             <div class="form-group">
-                <label class="col-sm-5 control-label no-padding-right" for="form-field-pass2">确认新密码</label>
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-pass2">确认新密码</label>
 
                 <div class="col-sm-9">
                     <input type="password" name="password2" id="form-field-pass2"/>
@@ -304,8 +214,8 @@
 
                         if(last_gritter) $.gritter.remove(last_gritter);
                         last_gritter = $.gritter.add({
-                            title: 'Avatar Updated!',
-                            text: 'Uploading to server can be easily implemented. A working example is included with the template.',
+                            title: '头像已更新',
+                            text: '按确定进行保存',
                             class_name: 'gritter-info gritter-center'
                         });
 
