--- a/src/main/webapp/WEB-INF/template/private/index.html
+++ b/src/main/webapp/WEB-INF/template/private/index.html
@@ -236,7 +236,8 @@
 #if($shiro.isUser())
 <li class="light-blue">
     <a data-toggle="dropdown" href="#" class="dropdown-toggle">
-        <img class="nav-user-photo" src="${base}/themes/ace/assets/avatars/user.jpg" alt="$shiro.getPrincipal().getRealname()" />
+        <img class="nav-user-photo" id="nav-user-photo" #if($shiro.getPrincipal().getAvatar())src="$shiro.getPrincipal().getAvatar()" #else
+        src="${base}/themes/ace/assets/avatars/profile-pic.jpg" #end alt="$shiro.getPrincipal().getRealname()" />
 		<span class="user-info"><small>欢迎光临,</small>$shiro.getPrincipal().getLoginname() </span>
         <i class="icon-caret-down"></i>
     </a>
