--- a/src/main/webapp/WEB-INF/template/private/sys/unit.html
+++ b/src/main/webapp/WEB-INF/template/private/sys/unit.html
@@ -1,3 +1,63 @@
+<div class="page-header">
+    <h1>
+        机构管理
+        <small>
+            <i class="icon-double-angle-right"></i>
+            添加修改单位机构
+        </small>
+    </h1>
+</div><!-- /.page-header -->
+
 <div class="row">
-    Hello!!!
-</div>
+    <div class="col-lg-12">
+        <button class="btn">
+            <i class="icon-pencil align-top bigger-125"></i>
+            添加
+        </button>
+        <button class="btn">
+            <i class="icon-pencil align-top bigger-125"></i>
+            修改
+        </button>
+        <button class="btn">
+            <i class="icon-pencil align-top bigger-125"></i>
+            删除
+        </button>
+    </div>
+    <div class="col-xs-12">
+        <!-- PAGE CONTENT BEGINS -->
+
+        <div class="row">
+
+            <div class="col-sm-6">
+                <div class="widget-box">
+                    <div class="widget-header header-color-blue2">
+                        <h4 class="lighter smaller">单位列表</h4>
+                    </div>
+
+                    <div class="widget-body">
+                        <div class="widget-main padding-8">
+                            <div id="tree1" class="tree"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+
+
+                <div class="widget-box">
+                    <div class="widget-header header-color-green2">
+                        <h4 class="lighter smaller">单位资料</h4>
+                    </div>
+
+                    <div class="widget-body">
+                        <div class="widget-main padding-8">
+                            <div id="tree2" class="tree"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- PAGE CONTENT ENDS -->
+    </div><!-- /.col -->
+</div><!-- /.row -->
