--- a/src/main/webapp/WEB-INF/template/private/sys/unit.html
+++ b/src/main/webapp/WEB-INF/template/private/sys/unit.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="${base}/themes/ace/assets/js/ztree/zTreeStyle/zTreeStyle.css" type="text/css">
+
 <div class="page-header">
     <h1>
         机构管理
@@ -32,7 +34,7 @@
 
                     <div class="profile-user-info-striped">
                         <div class="widget-main padding-8">
-                            <div id="tree1" class="tree"></div>
+                            <div id="tree1" class="ztree"></div>
                         </div>
                     </div>
 
@@ -52,6 +54,13 @@
 
                             <div class="profile-info-value">
                                 <span class="editable" id="name">&nbsp;</span>
+                            </div>
+                        </div>
+                        <div class="profile-info-row">
+                            <div class="profile-info-name"> 机构ID</div>
+
+                            <div class="profile-info-value">
+                                <span class="editable" id="id">&nbsp;</span>
                             </div>
                         </div>
                         <div class="profile-info-row">
@@ -100,8 +109,9 @@
     </div>
     <!-- /.col -->
 </div><!-- /.row -->
-<script src="${base}/themes/ace/assets/js/fuelux/data/fuelux.tree-sampledata.js"></script>
-<script src="${base}/themes/ace/assets/js/fuelux/fuelux.tree.min.js"></script>
+
+<script type="text/javascript"
+        src="${base}/themes/ace/assets/js/ztree/jquery.ztree.core-3.5.min.js"></script>
 <script src="${base}/themes/ace/assets/scripts/sys/unit.js"></script>
 
 <script type="text/javascript">
