--- a/src/main/webapp/WEB-INF/template/private/index.html
+++ b/src/main/webapp/WEB-INF/template/private/index.html
@@ -7,7 +7,8 @@
     <!-- basic styles -->
     <link href="${base}/themes/ace/assets/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="${base}/themes/ace/assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="${base}/themes/ace/assets/css/jquery-ui-1.10.3.custom.min.css" />
+    <link rel="stylesheet" href="${base}/themes/ace/assets/css/jquery-ui-1.10.3.full.min.css" />
+
     <link rel="stylesheet" href="${base}/themes/ace/assets/css/jquery.gritter.css" />
     <link rel="stylesheet" href="${base}/themes/ace/assets/css/select2.css" />
     <link rel="stylesheet" href="${base}/themes/ace/assets/css/bootstrap-editable.css" />
@@ -461,7 +462,7 @@
 <script src="${base}/themes/ace/assets/js/excanvas.min.js"></script>
 <![endif]-->
 
-<script src="${base}/themes/ace/assets/js/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="${base}/themes/ace/assets/js/jquery-ui-1.10.3.full.min.js"></script>
 <script src="${base}/themes/ace/assets/js/jquery.ui.touch-punch.min.js"></script>
 <script src="${base}/themes/ace/assets/js/jquery.slimscroll.min.js"></script>
 <script src="${base}/themes/ace/assets/js/jquery.easy-pie-chart.min.js"></script>
@@ -477,8 +478,6 @@
 <script src="${base}/themes/ace/assets/js/select2.min.js"></script>
 <script src="${base}/themes/ace/assets/js/jquery.slimscroll.min.js"></script>
 <script src="${base}/themes/ace/assets/js/jquery.hotkeys.min.js"></script>
-
-<!-- ace scripts -->
 
 <script src="${base}/themes/ace/assets/js/ace-elements.min.js"></script>
 <script src="${base}/themes/ace/assets/js/ace.min.js"></script>
