--- a/src/main/webapp/WEB-INF/template/private/sys/unit.html
+++ b/src/main/webapp/WEB-INF/template/private/sys/unit.html
@@ -8,11 +8,11 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <button class="btn btn-sm">
+        <button id="btnAdd" class="btn btn-sm">
             <i class="icon-pencil align-top bigger-125"></i>
             添加
         </button>
-        <button class="btn btn-primary btn-sm">
+        <button id="btnUpdate" class="btn btn-primary btn-sm">
             <i class="icon-edit align-top bigger-125"></i>
             修改
         </button>
