提交基础信息设置的查询功能

--- a/src/main/webapp/WEB-INF/template/private/login.html
+++ b/src/main/webapp/WEB-INF/template/private/login.html
@@ -71,7 +71,7 @@
                             <span class="block input-icon input-icon-right">
                                 <img src="${base}/captcha" name="captchaid" id="captchaid" title="点击刷新验证码" align="middle" style="cursor:pointer;position:absolute;left:0;height:34px;padding-top:1px;"
                                      data-rel="tooltip" data-placement="bottom" />
-                                <input style="padding-left: 92px;text-transform: uppercase;" type="text" name="captcha" id="captcha" class="form-control" placeholder="Captcha" />
+                                <input style="padding-left: 92px;text-transform: uppercase;" type="text" name="captcha" id="captcha" class="form-control" placeholder="请输入验证码!" />
                                 <i class="icon-tint"></i>
                             </span>
                         </label>
