--- a/src/main/webapp/WEB-INF/template/private/sys/config.html
+++ b/src/main/webapp/WEB-INF/template/private/sys/config.html
@@ -3,21 +3,20 @@
         参数配置
     </h1>
 </div>
-<script src="${base}/include/js/jquery.easyui.min.js"></script>	
 <script src="${base}/themes/ace/assets/js/jquery.dataTables.min.js"></script>
 <script src="${base}/themes/ace/assets/js/jquery.dataTables.bootstrap.js"></script>
 <div class="col-xs-12">
 	<div class="row">
 	    <div class="col-lg-12">
-	        <button class="btn btn-sm">
+	        <button id="configBtnAdd" class="btn btn-sm">
 	            <i class="icon-pencil align-top bigger-125"></i>
 	            添加
 	        </button>
-	        <button class="btn btn-primary btn-sm">
+	        <button id="configBtnUpdate" class="btn btn-primary btn-sm">
 	            <i class="icon-edit align-top bigger-125"></i>
 	            修改
 	        </button>
-	        <button class="btn btn-danger btn-sm">
+	        <button id="configBtnDel" class="btn btn-danger btn-sm">
 	            <i class="icon-trash align-top bigger-125"></i>
 	            删除
 	        </button>
